overflow-y bug fixed

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,6 +10,7 @@ body {
     display: grid;
     align-items: center;
     justify-content: center;
+    overflow-y: scroll;
   }
   
   // Container styles
